--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_APPWRITE_URL="https://cloud.appwrite.io/v1"
-VITE_APPWRITE_PROJECT_ID="T67f172c7001c359d00e1"
+VITE_APPWRITE_ENDPOINT="https://fra.cloud.appwrite.io/v1"
+VITE_APPWRITE_PROJECT_ID="67f172c7001c359d00e1"
 VITE_APPWRITE_DATABASE_ID="67f17399001b8dd5f376"
-VITE_APPWRITE_COLLECTION__ID="67f173c20012e87a7cb7"
+VITE_APPWRITE_COLLECTION_ID="67f173c20012e87a7cb7"
 VITE_APPWRITE_BUCKET_ID="67f1871c0003a43f77f5"
